deployment/payment-bff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-bff-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: payment.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-bff-service
                port:
                  number: 8080
